--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta charset="utf-8">
     <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-
     <link rel="stylesheet" type="text/css" href="public/css/styles.css">
 </head>
 
 <body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="https://retsrabbit.com" target="_blank">
+                    <img src="public/img/rets-rabbit-orange.png" width="30">Retsrabbit</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                <!--
+                    <li><a href="#">Home</a></li>
+                    -->
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </nav>
     <div class="container">
+        <h1 class="text-center">API Explorer</h1>
         <div class="row">
             <div class="col-sm-12" ui-view></div>
         </div>
