can load prebuilt queries now and fields sidebar is working pretty good. starting to work on the query help tab

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <li><a href="#">Home</a></li>
                     -->
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><button class="btn btn-orange">Get Started!</button></li>
+                </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
