rounded out the query tab

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><button class="btn btn-orange">Get Started!</button></li>
+                    <li>
+                        <a href="#" class="btn btn-orange hidden-xs">Get Started!</a>
+                    </li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
