--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="https://retsrabbit.com" target="_blank">
-                    <img src="public/img/rets-rabbit-orange.png" width="30">Retsrabbit</a>
+                    <img src="public/img/rets-rabbit-orange.png" width="30">Rets Rabbit</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
