--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <link rel="stylesheet" type="text/css" href="public/css/ng-walkthrough.css">
     <link rel="stylesheet" type="text/css" href="public/css/styles.css">
     <link rel="stylesheet" type="text/css" href="public/css/ui-bootstrap-csp.css">
 </head>
@@ -24,11 +25,11 @@
                     <img src="public/img/rets-rabbit-orange.png" width="30">Rets Rabbit</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+            <!--
                 <ul class="nav navbar-nav">
-                <!--
-                    <li><a href="#">Home</a></li>
-                    -->
+                    <li><a href="#">Tutorial</a></li>
                 </ul>
+                -->
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#" class="btn btn-orange hidden-xs">Get Started!</a>
@@ -38,12 +39,8 @@
             <!--/.nav-collapse -->
         </div>
     </nav>
-    <div class="container">
-        <h1 class="text-center">API Explorer</h1>
-        <div class="row">
-            <div class="col-sm-12" ui-view></div>
-        </div>
-    </div>
+
+    <div ui-view></div>
     <!-- LIBS -->
     <script type="text/javascript" src="app/app.js"></script>
 </body>
