add docs link to nav

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
                     <img src="public/img/rets-rabbit-orange.png" width="30">Rets Rabbit</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
-            <!--
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Tutorial</a></li>
+                    <li><a href="https://retsrabbit.com/docs" target="_blank">Docs</a></li>
                 </ul>
-                -->
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#" class="btn btn-orange hidden-xs">Get Started!</a>
