--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a href="http://retsrabbit.com/docs/v2">Docs</a></li>
                     <li>&nbsp;</li>
                     <li class="nav-item">
-                        <a href="https://patrickpohler.typeform.com/to/N7ZqgY?plan=none&cta=nav" class="btn btn-orange hidden-xs" target="_blank">FREE TRIAL</a>
+                        <a href="https://stage.retsrabbit.com/auth/register-trial" class="btn btn-orange hidden-xs" target="_blank">FREE TRIAL</a>
                     </li>
                 </ul>
             </div>
