--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,9 @@
 <head>
     <title>API Explorer: Rets Rabbit, API for MLS powered websites and apps</title>
     <meta charset="utf-8">
-    <!--<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
+    <base href="/">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <link rel="stylesheet" type="text/css" href="public/css/ng-walkthrough.css">
-    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
-    <link rel="stylesheet" type="text/css" href="public/css/ui-bootstrap-csp.css">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 
 <body>
@@ -30,7 +28,14 @@
                     <li class="nav-item"><a href="https://retsrabbit.com">Home</a></li>
                     <li class="nav-item"><a href="https://retsrabbit.com/developers-creatives">Services</a></li>
                     <li class="nav-item"><a href="https://retsrabbit.com/pricing">Pricing</a></li>
-                    <li class="nav-item active"><a href="http://explore.retsrabbit.com">API Explorer</a></li>
+                    <li class="nav-item active">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">API Explorer&nbsp;<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a ui-sref="app.home">Landing</a></li>
+                            <li><a ui-sref="app.explorer-v1">V1</a></li>
+                            <li><a ui-sref="app.explorer-v2">V2</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item"><a href="http://retsrabbit.com/docs/v2">Docs</a></li>
                     <li>&nbsp;</li>
                     <li class="nav-item">
@@ -42,16 +47,18 @@
         </div>
     </nav>
 
-    <div ui-view></div>
+    <div class="container">
+        <div ui-view></div>
+    </div>
 
-    <hr>
     <footer class="footer">
         <div class="container">
             <p class="text-center">2016 Anecka LLC, <a href="http://www.retsrabbit.com">Rets Rabbit</a></p>
         </div>
     </footer>
-    <!-- LIBS -->
-    <script type="text/javascript" src="app/app.js"></script>
+
+    <script type="text/javascript" src="/js/explore.js"></script>
+
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
