--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,10 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div ui-view></div>
+    <div id="wrap">
+        <div class="container" id="main">
+            <div ui-view></div>
+        </div>
     </div>
 
     <footer class="footer">
