use the toast directive like a boss

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <toast></toast>
+
     <!-- Fixed navbar -->
     <nav class="navbar  navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -47,12 +49,14 @@
         </div>
     </nav>
 
+    <!-- CONTENT -->
     <div id="wrap">
         <div class="container" id="main">
             <div ui-view></div>
         </div>
     </div>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
             <p class="text-center">2016 Anecka LLC, <a href="http://www.retsrabbit.com">Rets Rabbit</a></p>
